--- a/writers2020/contact.htm
+++ b/writers2020/contact.htm
@@ -4,11 +4,11 @@
 
 
 <title>Kontakt</title>
-<meta name="Description" content="Presentation av "Författarsläkten i norr".">
+<meta name="Description" content="Presentation av "Fï¿½rfattarslï¿½kten i norr".">
 <meta name="KeyWords" content="">
 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta name="Copyright" content="©fredman.se"/">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="Copyright" content="ï¿½fredman.se"/">
 
 
 <!-- ZoneLabs Privacy Insertion -->
@@ -32,7 +32,7 @@ document.onmousedown=noRightClick
 
 
 <META NAME=distribution CONTENT=global>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <META http-equiv="Content-Language" content="en">
 <META name="robots" content="index, follow">
 <META name="Rating" content="General">
@@ -100,7 +100,7 @@ document.onmousedown=noRightClick
 
 
 
-<!-- STARTA HUVUDINNEHÅLL -->
+<!-- STARTA HUVUDINNEHï¿½LL -->
 <table cellpadding="0" cellspacing="30" border="0" width="98%"><tr>
   <td align="left" valign="top" class="just">
 
@@ -112,22 +112,22 @@ document.onmousedown=noRightClick
       <p>
         <!-- PARAGRAF 1 -->
         KONTAKT<br>
-        Kontakta mig g&auml;rna om du har synpunkter eller frågor om USB 16GB-minnet &quot;F&ouml;rfattarsl&auml;kten i Norr&quot;, men &auml;ven i andra fr&aring;gor, som r&ouml;r medlemskap och sl&auml;ktforskning i norra V&auml;sterbotten. </p>
+        Kontakta mig g&auml;rna om du har synpunkter eller frï¿½gor om USB 16GB-minnet &quot;F&ouml;rfattarsl&auml;kten i Norr&quot;, men &auml;ven i andra fr&aring;gor, som r&ouml;r medlemskap och sl&auml;ktforskning i norra V&auml;sterbotten. </p>
       <p>ADRESS<br>
   Jan Fredman<br>
   Tingshusgatan 4<br>
-        937 31<span class="style3"> _<span class="style4">Burträsk</span></span>        </p>
+        937 31<span class="style3"> _<span class="style4">Burtrï¿½sk</span></span>        </p>
       <p>E-POST <br>
       <br>
         Jan Fredman (programansvarig): <a href="mailto:info@fredman.se" target="_blank">jan.fredman@gmail.com</a> </span><img src="picts/spacer.gif" height="5" width="350" alt="image"><br>
         </p>
       <p>WEBBPLATSER<br>
         <br>
-        <a href="https://fredman.se" title="Jan Fredmans släktforskning" target="_blank">https://fredman.se</a> <br>
-        <a href="https://fredman.se" title="Författarsläkten i Norr" target="_blank">https://fredman.se/fredman.se/pdfgallery-ac-authors.html</a> <br>
+        <a href="https://fredman.se" title="Jan Fredmans slï¿½ktforskning" target="_blank">https://fredman.se</a> <br>
+        <a href="https://fredman.se" title="Fï¿½rfattarslï¿½kten i Norr" target="_blank">https://fredman.se/fredman.se/pdfgallery-ac-authors.html</a> <br>
       </p>
       </div></td></tr></table>
-<!-- SLUT HUVUDINNEHÅLL -->
+<!-- SLUT HUVUDINNEHï¿½LL -->
 
 
 
