--- a/writers2020/index.html
+++ b/writers2020/index.html
@@ -180,7 +180,7 @@ document.onmousedown=noRightClick
 </span>
 
 <ul class="list">
-<li class="style1"><a href="_pdf-docs/Provinsartikel_2012_03-20.pdf" target="_blank">Provins 2012 #1</a>
+<li class="style1"><a href="./_pdf-docs/Provinsartikel_2012_03-20.pdf" target="_blank">Provins 2012 #1</a>
 <li class="style1"><a href="_pdf-docs/Gefle Dagblad 2012-03-21.pdf" target="_blank">Gävle Dagblad</a>
 <li class="style1"><a href="_pdf-docs/DN_Kulturbilagan_2012-03-21.pdf" target="_blank">DN</a>
 <li class="style1"><a href="_pdf-docs/Norran_2012-04-21.pdf" target="_blank">Norran</a>
